--- a/main.css
+++ b/main.css
@@ -1,12 +1,12 @@
-.logo{
-    width: 300px;
-    height: 150px;
+.logo {
+    margin-left: 350px;
     text-align: center;
     border-radius: 10%;
     -moz-border-radius: 10px;
     -webkit-border-radius: 50px;
 }
-.final{
+
+.final {
     margin: 0;
     color: black;
     width: 1345px;
@@ -15,20 +15,24 @@
     align-content: center;
     border: 3px solid black;
     -moz-border-radius: 10px;
-    -webkit-border-radius:40px;
+    -webkit-border-radius: 40px;
     filter: alpha(opacity=50);
 }
-.correo{
+
+.correo {
     display: flex;
     margin-left: 1170px;
 }
-#page{
+
+#page {
     background-color: gray;
 }
-#app{
+
+#app {
     color: black;
 }
-.loading-bar{
+
+.loading-bar {
     display: none;
     position: fixed;
     z-index: 1000;
@@ -40,11 +44,26 @@
     background-position: 50% 50%;
     background-color: rgba (255, 255, 255, 0.8);
     background-repeat: no-repeat;
-    
 }
+
 body.loading {
     overflow: hidden;
 }
-body.loading .loading-bar{
+
+body.loading .loading-bar {
     display: block;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    /*font-size: 50px;*/
+}
+
+.grid1 {
+    grid-column: 1;
+}
+
+.grid2 {
+    grid-column: 2;
 }
