--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@
 }
 
 #page {
-    background-color: gray;
+    background-color: #b9b9b9;
 }
 
 #app {
@@ -74,5 +74,14 @@ body.loading .loading-bar {
 }
 
 .collapsing {
-    background-color: gray;
+    background-color: #b9b9b9;
+}
+
+.name {
+    text-decoration: none;
+    font-size: 15px;
+}
+
+.buttonread {
+
 }
